# VRCBadge

./: .gitignore  Cargo.toml  README.md
docs/: README.md
docs/development/: deployment.md  roadmap.md  setup.md
docs/hardware/: assembly.md  esp32-migration.md  overview.md  pcb-design.md  pcb-guideline.md  pcb.md  shopping-list.md
docs/rfid/: technical-guide.md
docs/software/: api.md  architecture.md  ota-update.md
firmware/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: callbacks.rs  display.rs  dns.rs  event_loop.rs  http.rs  logger.rs  main.rs  pending.rs  platform.rs  profile.rs  storage.rs  sysinfo.rs  touch.rs  ui_helpers.rs  wifi.rs  wifi_state.rs
firmware/src/web/: api.rs  captive.rs  mod.rs  pages.rs
firmware/static/: index.html
fusion360/: enclosure.f3d
kicad/: VRCBadge.kicad_pcb  VRCBadge.kicad_pro  VRCBadge.kicad_sch  VRCBadge.kicad_sym  fp-lib-table  mcu.kicad_sch  peripheral.kicad_sch  power.kicad_sch  sym-lib-table
kicad/VRCBadge.pretty/: ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BL.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  TDFN-8_L2.0-W2.0-P0.50-BL-EP1.2.kicad_mod
src/: main.rs
ui/: badge.slint  virtual_keyboard.slint
