[package]
name = "digital-badge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# UI
slint = "1.14.1"

# Web API
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Hardware (Pi GPIO)
rppal = "0.22.1"

# Serial (for RFID, future)
serialport = "4.8.1"

# Utilities
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"      # Internal error propagation
thiserror = "2.0.17"    # API error types

[build-dependencies]
slint-build = "1.14.1"
